fix: double scrollbar

--- a/src/styles/baseline.less
+++ b/src/styles/baseline.less
@@ -124,7 +124,7 @@ html,
 body,
 #___gatsby,
 #gatsby-focus-wrapper {
-  height: 100%;
+  min-height: 100%;
   overflow-x: hidden;
 }
 
